fix error message spacing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -75,6 +75,7 @@ p {
   letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
+  line-height: 1; // not listed in tutorial.
 }
 #logo:hover{
   color: white;
